# anomalymetric

./: .gitignore  README.md  pyproject.toml
docs/: index.md  mkdocs.yml
docs/diagrams/: README.md  pipeline-flow.mmd
docs/for-contributors/: architecture.md  design-decisions.md  extending-loaders.md  extending-models.md  testing.md
docs/for-users/: cli.md  concepts.md  cosmic-rays.md  gravitational.md  installation.md  magnetometric.md  physics.md  quickstart.md  scoring.md
docs/img/: README.md
docs/scripts/: make_all.py  make_energy_coverage.py  make_sensor_coverage.py  make_ts_scan.py
notebooks/: 01_synthetic_walkthrough.ipynb  02_archive_query_example.ipynb  03_cosmicray_module.ipynb  04_matched_filter_library.ipynb  05_magnetometric_haloscope.ipynb  06_gravitational_differential.ipynb
site/: 404.html  index.html  sitemap.xml
site/diagrams/: class-diagram.mmd  index.html  loeb-turner-sequence.mmd  module-deps.mmd  spectrumkind-dispatch.mmd
site/for-contributors/architecture/: index.html
site/for-contributors/design-decisions/: index.html
site/for-contributors/extending-loaders/: index.html
site/for-contributors/extending-models/: index.html
site/for-contributors/testing/: index.html
site/for-users/cli/: index.html
site/for-users/concepts/: index.html
site/for-users/cosmic-rays/: index.html
site/for-users/gravitational/: index.html
site/for-users/installation/: index.html
site/for-users/magnetometric/: index.html
site/for-users/physics/: index.html
site/for-users/quickstart/: index.html
site/for-users/scoring/: index.html
site/img/: index.html
site/scripts/: make_all.py  make_fit_converge.py  make_line_injection.py  make_pipeline_svg.py  make_planck_sweep.py
site/search/: search_index.json
src/anomalymetric/: __init__.py  cli.py  pipeline.py  spectrum.py  units.py
src/anomalymetric/cosmicray/: knee_ankle.py  propagation.py  score.py  spectrum.py
src/anomalymetric/data/: __init__.py
src/anomalymetric/data/references/: cr_allparticle_pdg.csv
src/anomalymetric/forward/: base.py  distance.py  exposure.py  response.py  sensor.py
src/anomalymetric/gravitational/: fifth_force.py  models.py  score.py  spectrum.py
src/anomalymetric/ingest/: archives.py  base.py  synthetic.py  synthetic_psd.py  tabular.py
src/anomalymetric/magnetometric/: haloscope.py  models.py  score.py  spectrum.py
src/anomalymetric/models/: base.py  exotic.py  inference.py  lines.py  mixture.py  naima_templates.py  powerlaw.py  reflective.py  thermal.py
src/anomalymetric/score/: bayes.py  loeb_turner.py  ranking.py  trials.py  variability.py
tests/: conftest.py  test_archives.py  test_bayes_factor.py  test_cli_smoke.py  test_distance.py  test_external.py  test_fit_recovers_truth.py  test_forward_sensor_and_mixture.py  test_likelihood_dispatch.py  test_models_predict.py  test_psd_fit_recovers_truth.py  test_psd_likelihood_dispatch.py  test_psd_score_known_anomaly.py  test_reference_data.py  test_score_known_anomaly.py  test_spectrum_units.py  test_trials_correction.py  test_upper_limits.py  test_validation_and_scale.py  test_variability.py
